@@ -523,6 +523,7 @@ if ( ($without_conf < 1) && ($db_only < 1) )
 	if (-e "/etc/zaptel.conf") {$zapdahdi .= " /etc/zaptel.conf";}
 	if (-e "/etc/dahdi/system.conf") {$zapdahdi .= " /etc/dahdi";}
 	if (-e "/etc/apache2") {$zapdahdi .= " /etc/apache2";}
+	if (-e "/etc/mysql") {$zapdahdi .= " /etc/mysql";}
 	if (-e "/etc/letsencrypt") {$zapdahdi .= " /etc/letsencrypt";}
 	if (-e "/usr/share/astguiclient/AST_DB_lead_status_change.pl") {$zapdahdi .= " /usr/share/astguiclient/AST_DB_lead_status_change.pl";}
 	if (-e "/usr/local/sbin") {$zapdahdi .= " /usr/local/sbin";}
